[project]
name = "page-history-table"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datacompy>=0.17.1",
    "fugue>=0.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "snowflake>=1.6.0",
    "spark>=0.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
